src/objects/P_DR_Line_Item__c/P_DR_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Created for ACES project to store P&amp;DR Line Item details</description>
    <label>P&amp;DR Line Item</label>
    <nameField>
        <displayFormat>PDRLI-{000000}</displayFormat>
        <label>P&amp;DR Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P&amp;DR Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>