src/objects/P_DR_Line_Item__c/fields/PDR_Created_ON__c.field-meta.xml
<CustomField>
    <fullName>PDR_Created_ON__c</fullName>
    <label>PDR Created ON</label>
    <type>DateTime</type>
</CustomField>