src/objects/P_DR_Line_Item__c/fields/PDR_Number__c.field-meta.xml
<CustomField>
    <fullName>PDR_Number__c</fullName>
    <label>PDR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>