src/objects/P_DR_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Line_Item_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>